--- a/branches/dev-issue-54/MyNightOut/MyNightOut/src/mynightout/ui/EditSupplierForm.form
+++ b/branches/dev-issue-54/MyNightOut/MyNightOut/src/mynightout/ui/EditSupplierForm.form
@@ -58,6 +58,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="&#x391;&#x3ba;&#x3cd;&#x3c1;&#x3c9;&#x3c3;&#x3b7;"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CancelButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
