Έγινε η NightclubMainFrame, στην οποία αδηγείται ο χρήστης καταστηματάρχης, αφού κάνει επιτυχές login. Στη NightclubMainFrame έχουν συγκεντρωθεί όλα τα κουμπία που έκαναν λειτουργίες σχετικές με το κατάστημα. Μπήκε κουμπί "Αποσύνδεση" και γράφτηκε κώσικας ώστε να απικοινωνούν μεταξύ τους οι φόρμες(επιστροφή στη NightclubMainFrame,  αντί για έξοδο από το πρόγραμμα, για παράδειγμα).

--- a/branches/dev-issue-102/MyNightOut/MyNightOut/MyNightOut/src/mynightout/ui/ShowSupplierForm.form
+++ b/branches/dev-issue-102/MyNightOut/MyNightOut/MyNightOut/src/mynightout/ui/ShowSupplierForm.form
@@ -79,11 +79,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="OK"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="showSuppliersButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="CancelButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="&#x391;&#x39a;&#x3a5;&#x3a1;&#x3a9;&#x3a3;&#x397;"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CancelButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
